# Survey-Propagation

./: .gitignore  CMakeLists.txt  README.md  asfasdfasdfasd  dudas.md
SP/: CMakeLists.txt  readme.md
SP/docs/: Doxyfile.in
SP/inc/: FactorGraph.h
SP/src/: FactorGraph.cpp
Scripts/: check_formulas.sh  gen_formulas.sh  readme.md
cnf/: cnf_10000_42500.cnf  cnf_100_4240.cnf  cnf_5_10.cnf  cnf_6000_6875.cnf
cnf/testCNF/100/4.21/: cnf_100_421.00_35.cnf
cnf/testCNF/100/4.22/: cnf_100_422.00_34.cnf
cnf/testCNF/100/4.24/: cnf_100_424.00_6.cnf
cnf/testCNF/1000/4.21/: cnf_1000_4210.00_6.cnf
cnf/testCNF/1000/4.22/: cnf_1000_4220.00_30.cnf
cnf/testCNF/1000/4.23/: cnf_1000_4230.00_15.cnf
cnf/testCNF/1000/4.24/: cnf_1000_4240.00_22.cnf
cnf/testCNF/4.23/: cnf_100_423.00_1.cnf
doc/: proyecto.fdb_latexmk  proyecto.fls  proyecto.tex
doc/secciones/: 01_intro.tex  03_mhs_alg.tex  04_mhs_CS.tex  07_m_exp.tex
docs/: Doxyfile.in
inc/: FactorGraph.h  SurveyPropagation.h
plantilla/: bibliografia.bib  proyecto.tex
plantilla/portada/: portada.tex
plantilla/prefacios/: prefacio.tex
plantilla/secciones/: 01_intro.tex  02_antec.tex  03_sp.tex  04_exp.tex  05_impl_dis.tex  06_glu.tex  07_ing_soft.tex  09_conc.tex  10_res.tex
src/: CMakeLists.txt  FactorGraph.cpp  SurveyPropagation.cpp  main.cpp
